# aa-sov-timer

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: automated-checks.yml
.make/conf.d/: development.mk  django-esi.mk  django.mk
locale/: es.json  ja.json  ko_KR.json  ru.json  zh_Hans.json
pastebin/: sovereignty-campaigns.json  sovereignty-systems.json
sovtimer/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  models.py  providers.py  swagger.json  tasks.py  urls.py  utils.py  views.py
sovtimer/handler/: esi_handler.py  etag.py
sovtimer/helper/: etag.py  static_files.py
sovtimer/locale/: django.pot
sovtimer/locale/cs/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/de/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/es/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/it_IT/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/ja/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/nl/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/ru/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/sk/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/uk/LC_MESSAGES/: django.mo  django.po
sovtimer/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
sovtimer/management/commands/: sovtimer_load_initial_data.py
sovtimer/migrations/: 0001_initial.py  0001_initialize.py  0002_aasovtimercampaigns.py  0002_aasovtimercampaigns_aasovtimerstructures.py  0002_remove_sovereigntystructure_structure_type_id.py  0003_auto_20201113_1033.py  0004_auto_20201113_1856.py  0005_auto_20201114_0720.py  0006_rename_models.py  0007_cleanup_models.py  0008_fix_campaign_attackers_score.py  0009_alter_campaign_options_and_more.py  0010_alter_campaign_event_type.py  0011_alliance_alter_campaign_event_type_and_more.py
sovtimer/providers/: applogger.py  esi.py
sovtimer/static/sovtimer/css/: aa-bootstrap-fix.css  aa-bootstrap-fix.min.css  aa-sov-timer.css  aa-sov-timer.min.css  aa-sov-timer.min.css.map
sovtimer/static/sovtimer/font/materialicons/v67/: README.md
sovtimer/static/sovtimer/js/: aa-sov-timer.js  aa-sov-timer.min.js  aa-sov-timer.min.js.map
sovtimer/static/sovtimer/libs/DataTables/2.3.4/: dataTables.bootstrap5.js  dataTables.bootstrap5.min.js  dataTables.bootstrap5.min.js.map  datatables.min.js  datatables.min.js.map
sovtimer/static/sovtimer/libs/datatables/plugins/: dataTables.rowGroup.min.min.js  datetime.js  rowGroup.bootstrap.min.min.css
sovtimer/templates/sovtimer/: base.html  dashboard.html
sovtimer/templates/sovtimer/bundles/: aa-sov-timer-css.html  aa-sov-timer-js.html  datatables-2-css.html  datatables-2-js.html  datatables-datetime-js.html
sovtimer/templates/sovtimer/partials/common/: spinner.html
sovtimer/templates/sovtimer/partials/dashboard/: table.html
sovtimer/templates/sovtimer/partials/header/: h1.html
sovtimer/templatetags/: sovtimer.py  sovtimer_versioned_static.py
sovtimer/tests/: __init__.py  test_ajax_calls.py  test_app_settings.py  test_auth_hooks.py  test_handler_esi.py  test_handler_etag.py  test_helper_etag.py  test_integration.py  test_model_campaign.py  test_model_sovereignty_structures.py  test_models.py  test_providers.py  test_tasks.py  test_templatetags.py  test_user_agent.py  test_views.py  utils.py
sovtimer/tests/fixtures/: allianceauth.json  load_allianceauth.py  load_sovtimer.py  sovtimer.json  utils.py
testauth/: local.py  settings.py  settings_aa3x.py
testauth/settings/: local.py
