[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-sov-timer"
description = "Sov Campaign Timer for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "sovereignty_timer",
    "timerboard",
]
license = { file = "LICENSE" }
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.6,<5",
    "allianceauth-app-utils>=1.25",
    "django-eveuniverse>=1.5.4",
]
optional-dependencies.tests-allianceauth-latest = [
    "coverage",
    "django-webtest",
]
urls.Changelog = "https://github.com/ppfeufer/aa-sov-timer/blob/master/CHANGELOG.md"
urls.Documentation = "https://github.com/ppfeufer/aa-sov-timer/blob/master/README.md"
urls.Donations = "https://ko-fi.com/ppfeufer"
urls.Homepage = "https://github.com/ppfeufer/aa-sov-timer"
urls.Source = "https://github.com/ppfeufer/aa-sov-timer.git"
urls.Tracker = "https://github.com/ppfeufer/aa-sov-timer/issues"

[tool.hatch.build]
include = [
    "/sovtimer",
]

[tool.hatch.version]
path = "sovtimer/__init__.py"
